Fix h2 padding and hide menu on mobile

--- a/docs_src/style.styl
+++ b/docs_src/style.styl
@@ -15,12 +15,15 @@ h1
     text-align center
 
 h2
-    margin-top 120px
+    margin-top 200px
     margin-bottom 30px
     padding-top 40px
     font-size 32px
     font-weight 100
     text-align center
+
+    &:first-of-type
+        margin-top 0
 
 h3
     margin-top 40px
